height and width fix, and the socials wrap

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+  max-width: 100vw;
+  max-height: 100svh;
+}
+
 body {
   background-image: url("stars-background.png");
   background-color: black;
@@ -10,7 +15,8 @@ body {
 .socials {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .social-button {
